@@ -9,5 +9,6 @@
 * implement PDU split at content map
 * formalize request splitting-merging logic
 * improve logging plugin to expand snmp-* options in log file path
+* migrate the logging plugin to use its own logger infrastructure
 * cross-link options in configuration docs
 * count runtime errors, report them periodically or serve as SNMP table
