@@ -43,7 +43,6 @@ peers-group {
 
 plugin-modules-path-list: ./plugins ${plugin-dir}
 
-
 plugin-group {
   plugin-module: oidfilter
   plugin-options: config=${config-dir}/plugins/oidfilter.conf
